# blackboxai-1743735970400

./: CMakeLists.txt  README.md
pdf_search_app/: main.cpp  requirements.txt
pdf_search_app/backend/: PythonBridge.py
pdf_search_app/qml/: BookLibrary.qml  MainWindow.qml  MetadataPanel.qml  SearchBar.qml
qml/: PdfViewer.qml
